# lms-fastapi

./: .gitignore  README.md  alembic.ini  logger.py  main.py  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 94ebbc0e1373_init.py
api/: auth.py  courses.py  song.py  users.py
api/utils/: auth.py  auth_bearer.py  courses.py  users.py
db/: db_setup.py
db/models/: __init__.py  course.py  user.py
schemas/: user.py
