[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = ""
authors = ["SolonKarandanis <39560794+SolonKarandanis@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.6"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.2"
alembic = "^1.13.2"
pyjwt = "^2.9.0"
python-decouple = "^3.8"
email-validator = "^2.2.0"
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
